# string

./: .gitignore  CMakeLists.txt  EString.cpp  EString.h  EStringEncodings.h  EString_Ansi.cpp  EString_Streams.cpp  README.md  string.h  test.cpp
.github/workflows/: tests.yml
tests/: CMakeLists.txt  ChecksTests.cpp  EncodingsTests.cpp  InitializingTests.cpp  OperatorsTests.cpp  StringModifyingTests.cpp
tests/Win32WindowsTest/: CMakeLists.txt  main.cpp
